external-crates/move/crates/move-compiler/tests/move_check/typing/module_call_missing_function.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03003]: unbound module member
   ┌─ tests/move_check/typing/module_call_missing_function.move:13:9
   │
10 │     fun foo(): u64 { 0 }
   │         --- Similarly named defintion found here
   ·
13 │         Self::fooo();
   │         ^^^^^^^^^^
   │         │
   │         Unbound function 'fooo' in current scope
   │         Did you mean: 'foo'

error[E03005]: unbound unscoped name
   ┌─ tests/move_check/typing/module_call_missing_function.move:14:9
   │
14 │         foooo();
   │         ^^^^^ Unbound function 'foooo' in current scope

error[E03003]: unbound module member
   ┌─ tests/move_check/typing/module_call_missing_function.move:15:9
   │
15 │         X::foooooo();
   │         ^^^^^^^^^^ Invalid module access. Unbound function 'foooooo' in module '0x2::X'
